app.yml
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: cncamp-8

---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-http-server
  namespace: cncamp-8
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-http-server
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
      labels:
        app: go-http-server
    spec:
      imagePullSecrets:
        - name: go-http-server-secret
      restartPolicy: Always
      containers:
        - name: go-http-server
          image: ly4cn/go-native-cloud:week10
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "0.5"
              memory: 100Mi
            limits:
              cpu: "1"
              memory: 1G
          livenessProbe:
            httpGet:
              path: /healthz
              port: 80
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 3
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 3
            timeoutSeconds: 3

---
# Service
# 因为在云服务上试，所以除了 NodePort 外，还可以用 LoadBalancer，方便测试
# 如果没有 Service，本地还可以先用 PortForward 来测试
#
# apiVersion: v1
# kind: Service
# metadata:
#  name: lb-azure-service
#  namespace: cncamp-8
# spec:
#   type: LoadBalancer
#   ports:
#     - targetPort: 80
#       name: httpport
#       port: 80
#       protocol: TCP
#   selector:
#     app: go-http-server
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: http-services
  namespace: cncamp-8
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      name: http
  selector:
    app: go-http-server
---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  namespace: cncamp-8
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - test.gocloudnative.work
      secretName: test-gocloudnative-tls
  rules:
    - host: test.gocloudnative.work
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: http-services
                port:
                  number: 80
