virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpserver-vs
  namespace: week12
spec:
  hosts:
    - "cnc12.gocloudnative.work"
  gateways:
    - httpserver-gw
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 80
            host: http-server
